--- a/assets/css/marketplace.css
+++ b/assets/css/marketplace.css
@@ -92,7 +92,7 @@ img {
 }
 
 /* title top- collection starts here */
-.title-collection{
+/* .title-collection{
     margin-top: 70px;
     text-align: center;
 }
@@ -107,6 +107,92 @@ img {
     text-align: center;
 
 }
-.product-para{
+ */
+
+ .featured{
+    max-width: 1140px;
+ }
+ .product-para{
     margin-left: 30px;
 }
+/* hover need to update - not working */
+.product{
+cursor: pointer;
+}
+
+.product img{
+    height: 250px;
+    width: 176px;
+    transition: 0.3s all;
+}
+.product img :hover{
+    opacity: 0.6;
+    background-color: rgb(167, 70, 0);
+}
+
+.star{
+    color: #ffa200;
+    font-size: 14px;
+}
+.star i:last-child{
+    color: #ddd;
+}
+.p-name{
+    color: #777;
+}
+.p-price{
+    font-size: 20px;
+}
+.p-price span{
+    font-size: 16px;
+    color: #ddd;
+}
+.buy-btn{
+    background-color: #3e5067;
+    color: #fff;
+    padding: 5px 10px;
+   font-size: 18px;
+   margin: 10px;
+   border: none;
+}
+
+.buy-btn:hover{
+    background-color: #fff;
+    color: #3e5067;
+    border: 2px solid #3e5067 ;
+}
+
+/* parallax container starts here */
+.parallax-container {
+    position: relative;
+    height: 400px; /* Set the height of the parallax container */
+    overflow: hidden;
+  }
+  
+  .parallax {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200%; /* Set the height to be taller than the container */
+    background-image: url('../images/marketplace/fixed-bg.jpg'); /* Set the background image */
+    background-size: cover;
+    background-attachment: fixed; /* Ensure the background image stays fixed */
+  }
+   .banner-contain{
+    margin-top:130px;
+    margin-right: 100px;
+    text-align: center;
+    float:right;
+    text-transform: uppercase;
+  }
+  .banner-contain h2{
+    font-size: 90px;
+  
+    color: #3e5067;
+
+  }
+  .banner-contain h3{
+    font-size: 55px;
+    text-transform: uppercase;
+  }
